@@ -1,3 +1,13 @@
+2012-04-25  Francesco Lannutti
+ * src/spicelib/analysis/dcpss.c
+  Corrected a bug in which the first time-point of the
+   PSS Time Domain Plot wasn't grabbed, resulting in a
+   truncated plot
+ * examples/pss/colpitt_osc_pss.cir
+  Corrected the .pss line to reach convergence
+ * examples/pss/vdp_osc_pss.cir
+  Corrected the .pss line to reach convergence
+
 ============================ ngspice-24 ==================================
 2012-01-30  Dietmar Warning
  * src/spicelib/devices/dio/diotemp.c: Add temperature dependent
